[gd_scene load_steps=9 format=3 uid="uid://ytqajrdi7fqj"]

[ext_resource type="Script" path="res://objects/trampoline.gd" id="1_73nxn"]
[ext_resource type="AudioStream" uid="uid://c74thugcgcetg" path="res://sounds/trampoline_bounce.mp3" id="3_0nmjc"]
[ext_resource type="PackedScene" uid="uid://1hx4wcwosemd" path="res://models/props/block-moving-large.glb" id="3_lbpl7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t50jv"]
size = Vector3(2, 0.5, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_rnm3k"]
size = Vector3(1.75, 0.5, 1.75)

[sub_resource type="Animation" id="Animation_1iltb"]
resource_name = "bounce"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("block-extended:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("block-extended:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.166667, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(2, 1, 2), Vector3(1.75, 2, 1.75), Vector3(1.75, 2.1, 1.75), Vector3(1.75, 2, 1.75), Vector3(2.25, 0.9, 2.25), Vector3(2, 1, 2)]
}

[sub_resource type="Animation" id="Animation_hgpsv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("block-extended:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("block-extended:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 1, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_leh4b"]
_data = {
"RESET": SubResource("Animation_hgpsv"),
"bounce": SubResource("Animation_1iltb")
}

[node name="trampoline" type="Node3D"]
script = ExtResource("1_73nxn")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("BoxShape3D_t50jv")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.425, 0)
shape = SubResource("BoxShape3D_rnm3k")

[node name="TrampolineAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_0nmjc")

[node name="block-extended" parent="." instance=ExtResource("3_lbpl7")]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, -0.1, 0)

[node name="TrampolineAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_leh4b")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
